# india-state-district-mappings

./: .gitignore  LICENSE  pyproject.toml
data/india/: district_to_state.json
indian_mapper/: __init__.py  resolver.py
indian_mappings/: __init__.py  resolver.py
