[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "indian-mapper"
version = "0.1.0"
description = "Resolve Indian districts and states for dataset cleaning"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

authors = [
  { name = "Madhan" }
]

[project.urls]
Homepage = "https://github.com/Madhan-1000/india-state-district-mappings"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { include = ["indian_mapper"] }
